k8s/calico/netowrkpolicies/cart-porduct.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: cart-to-product
  namespace: cart-service
spec:
  selector: "app == 'cart'"
  types: [Egress]

  egress:
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: "kubernetes.io/metadata.name == 'product-service'"
      selector: "app == 'product'"
      ports: [80,5000]

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: product-from-cart
  namespace: product-service
spec:
  selector: "app == 'product'"
  types: [Ingress]

  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [80,5000]
    source:
      namespaceSelector: " kubernetes.io/metadata.name == 'cart-service'"
      selector: "app == 'cart'"
