k8s/calico/netowrkpolicies/fe-allow.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: istio-to-fe
  namespace: istio-system
spec:
  selector: "app == 'ingressgateway'"
  types: [Egress]

  egress:
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: "kubernetes.io/metadata.name == 'frontend'"
      selector: "app == 'frontend'"
      ports: [80]
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-istio-gw
  namespace: frontend
spec:
  selector: "app == 'frontend'"     
  types: [Ingress]
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: "app == 'istio-ingressgateway'"
      namespaceSelector: "kubernetes.io/metadata.name  == 'istio-system'"
    destination:
      ports: [80]  
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: fe-to-auth-service
  namespace: frontend
spec:
  selector: "app == 'frontend'"
  types: [Egress]

  egress:
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: "kubernetes.io/metadata.name == 'auth-service'"
      selector: "app == 'auth-service'"
      ports: [80]
