k8s/calico/netowrkpolicies/order-cart.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: order-to-cart
  namespace: order-service
spec:
  selector: "app == 'order'"
  types: [Egress]

  egress:
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: "kubernetes.io/metadata.name == 'cart-service'"
      selector: "app == 'cart'"
      ports: [80,5000]

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: cart-from-order
  namespace: cart-service
spec:
  selector: "app == 'cart'"
  types: [Ingress]

  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [80,5000]
    source:
      namespaceSelector: " kubernetes.io/metadata.name == 'order-service'"
      selector: "app == 'order'"
