k8s/calico/netowrkpolicies/order-test.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-to-db
  namespace: order-service
spec:
  selector: "app == 'order'"
  types: [Egress]

  egress:
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: "kubernetes.io/metadata.name == 'order-service'"
      selector: "app == 'order-db'"
      ports: [5432]

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-from-service
  namespace: order-service
spec:
  selector: "app == 'order-db'"
  types: [Ingress]

  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [5432]
    source:
      namespaceSelector: " kubernetes.io/metadata.name == 'order-service'"
      selector: "app == 'order'"
