k8s/calico/netowrkpolicies/test-egress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-to-db
  namespace: default
spec:
  selector: "run == 'alpine'"
  types: [Egress]

  egress:
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: "kubernetes.io/metadata.name == 'auth-service'"
      selector: "app == 'auth-db'"
      ports: [5432]

---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-from-alpine
  namespace: auth-service
spec:
  selector: "app == 'auth-db'"           # protect only the API pod(s)
  types: [Ingress]

  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [5432]
    source:
      namespaceSelector: " kubernetes.io/metadata.name == 'default'"
      selector: "run == 'alpine'"
